--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ README.html
 # Exclude other stuff
 internals/*
 shiny_bookmarks/*
+
+# Exclude calibration data
+calibration_data/20170321_Al2O3_CalibrationData.Rdata
+calibration_data/20180525_Al2O3_CalibrationData.Rdata
