--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,15 +17,21 @@ Description: A 'Shiny' application providing an exhanced graphical user
 License: GPL (>= 3)
 URL: https://github.com/crp2a/Al2O3_AnalysisApp
 BugReports: https://github.com/crp2a/Al2O3_AnalysisApp/issues
+Depends:
+    R (>= 2.10)
 Imports: 
     digest,
-    ggplot2,
-    knitr,
-    Luminescence,
+    graphics,
+    grDevices,
+    htmlwidgets,
+    Luminescence (>= 0.9.0),
     rhandsontable,
-    shape,
-    shiny,
-    shinyjs
+    shiny (>= 1.6.0),
+    shinyjs,
+    utils
+Suggests:
+    pander
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+LazyData: true
