--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Al2O3AnalysisApp
 Title: 'Shiny' Application for the Analysis of Al2O3:C Chips Measurements
-Version: 0.1.2.9000
+Version: 0.1.2.9001
 Authors@R: c(
     person("Sebastian", "Kreutzer", , "sebastian.kreutzer@uni-heidelberg.de", role = "aut",
            comment = c(ORCID = "0000-0002-0734-2199")),
@@ -28,10 +28,11 @@ Imports:
     rhandsontable,
     shiny (>= 1.6.0),
     shinyjs,
+    stats,
     utils
 Suggests:
     pander
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 LazyData: true
