--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Authors@R: c(
     person("CNRS", role = "fnd"),
     person("LabEx Sciences archéologiques de Bordeaux", role = "fnd")
   )
-Description: A 'Shiny' application providing an exhanced graphical user
+Maintainer: Archéosciences Bordeaux <services-archeosciences@u-bordeaux-montaigne.fr>
+Description: A 'shiny' application providing an exhanced graphical user
     interface to the function analyse_Al2O3C_Measurement() from the R
     package 'Luminescence'.
 License: GPL (>= 3)
@@ -34,5 +35,5 @@ Suggests:
     pander
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 LazyData: true
